# ray-tracer

./: .gitignore  CMakeLists.txt  README.en.md  README.md
RayTrace/: RayTrace.sln
RayTrace/RayTrace/: RayTrace.cpp  RayTrace.vcxproj  RayTrace.vcxproj.filters  Timer.h  aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  dielectric.h  diffuse_light.h  hittable.h  hittable_list.h  img.ppm  lambertian.h  matal.h  material.h  metal.h  moving_sphere.h  perlin.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h  xy_rect.h
RayTrace/RayTrace/stb-master/: stb_image.h
RayTrace/RayTrace/x64/Debug/: RayTrace.exe.recipe  RayTrace.ilk  vc143.idb
RayTrace/RayTrace/x64/Debug/RayTrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTrace.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
